welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: illegal start of simple expression
do var bis = 0 
   ^Poucet:3: error: 'while' expected but 'for' found.
for (i<- 0 to 4 ) { avance() ; 
^Poucet:8: error: '(' expected but ';' found.
while {!sortieTrouvee()} 
^Poucet:8: error: '(' expected but '{' found.
while {!sortieTrouvee()} 
      ^Poucet:10: error: illegal start of simple expression
	}
        ^